--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
         🚀 Performance Mode
       </button>
 
+      <!-- Add rotate instruction above the card -->
+      <div class="rotate-instruction">
+        <div class="rotate-text">Rotate Me!</div>
+        <div class="rotate-arrow">↻</div>
+      </div>
+
       <div class="welcome-card">
         <div class="welcome-card-inner">
           <!-- Front of the card -->
@@ -170,14 +176,12 @@
           </div>
           <nav>
             <ul>
-              <li><a href="#home" data-i18n="nav_home">Home</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#portfolio">Portfolio</a></li>
-              <li>
-                <a href="#about" class="active" data-i18n="nav_about">About</a>
-              </li>
-              <li><a href="#contact" data-i18n="nav_contact">Contact</a></li>
-              <li><a href="#pages">Pages</a></li>
+              <li><a href="#main-content" data-section="home" data-i18n="nav_home">Home</a></li>
+              <li><a href="#services" data-section="services">Services</a></li>
+              <li><a href="#projects" data-section="projects">Portfolio</a></li>
+              <li><a href="#about" data-section="about" data-i18n="nav_about">About</a></li>
+              <li><a href="#testimonials" data-section="testimonials">Testimonials</a></li>
+              <li><a href="#skills" data-section="skills">Skills</a></li>
             </ul>
           </nav>
           <div class="header-cta">
