--- a/index.html
+++ b/index.html
@@ -173,11 +173,23 @@
           </div>
           <nav>
             <ul>
-              <li><a href="#main-content" data-section="home" data-i18n="nav_home">Home</a></li>
+              <li>
+                <a href="#main-content" data-section="home" data-i18n="nav_home"
+                  >Home</a
+                >
+              </li>
               <li><a href="#services" data-section="services">Services</a></li>
               <li><a href="#projects" data-section="projects">Portfolio</a></li>
-              <li><a href="#about" data-section="about" data-i18n="nav_about">About</a></li>
-              <li><a href="#testimonials" data-section="testimonials">Testimonials</a></li>
+              <li>
+                <a href="#about" data-section="about" data-i18n="nav_about"
+                  >About</a
+                >
+              </li>
+              <li>
+                <a href="#testimonials" data-section="testimonials"
+                  >Testimonials</a
+                >
+              </li>
               <li><a href="#skills" data-section="skills">Skills</a></li>
             </ul>
           </nav>
