--- a/index.html
+++ b/index.html
@@ -659,6 +659,95 @@
         </div>
       </section>
 
+      <section id="contact" class="contact">
+        <div class="container">
+          <h2 class="section-title">Get In <span>Touch</span></h2>
+          <p class="section-desc">
+            Let's connect! Send me a message and I'll get back to you as soon as
+            possible.
+          </p>
+
+          <div class="contact-container">
+            <div class="contact-info">
+              <h3>Contact Information</h3>
+              <p>
+                Feel free to reach out for collaborations, job opportunities, or
+                just to say hello!
+              </p>
+
+              <div class="info-item">
+                <div class="icon">📱</div>
+                <p>+62 895-3522-81010</p>
+              </div>
+
+              <div class="info-item">
+                <div class="icon">✉️</div>
+                <p>237006079@student.unsil.ac.id</p>
+              </div>
+
+              <div class="info-item">
+                <div class="icon">📍</div>
+                <p>Indonesia</p>
+              </div>
+
+              <div class="social-links">
+                <a href="https://github.com/grnlogic" class="social-icon">
+                  <span>GitHub</span>
+                </a>
+                <a href="#" class="social-icon">
+                  <span>LinkedIn</span>
+                </a>
+                <a href="#" class="social-icon">
+                  <span>Twitter</span>
+                </a>
+              </div>
+            </div>
+
+            <div class="contact-form-container">
+              <form
+                id="contact-form"
+                class="contact-form"
+                action="process_contact.php"
+                method="POST"
+              >
+                <div class="form-group">
+                  <label for="name">Name</label>
+                  <input type="text" id="name" name="name" required />
+                </div>
+
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="email" id="email" name="email" required />
+                </div>
+
+                <div class="form-group">
+                  <label for="subject">Subject</label>
+                  <input type="text" id="subject" name="subject" required />
+                </div>
+
+                <div class="form-group">
+                  <label for="message">Message</label>
+                  <textarea
+                    id="message"
+                    name="message"
+                    rows="5"
+                    required
+                  ></textarea>
+                </div>
+
+                <div class="form-group">
+                  <button type="submit" class="btn primary">
+                    Send Message
+                  </button>
+                </div>
+
+                <div id="contact-message"></div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <footer>
         <div class="container">
           <div class="footer-content">
@@ -701,10 +790,20 @@
                 Feel free to reach out for collaboration on open-source or fun
                 weekend projects!
               </p>
-              <form class="newsletter-form">
-                <input type="email" placeholder="Your email" required />
+              <form
+                class="newsletter-form"
+                action="process_newsletter.php"
+                method="POST"
+              >
+                <input
+                  type="email"
+                  name="email"
+                  placeholder="Your email"
+                  required
+                />
                 <button type="submit"><span>→</span></button>
               </form>
+              <div id="newsletter-message"></div>
               <div class="social-icons">
                 <a href="https://github.com/grnlogic"><i>f</i></a>
                 <a href="#"><i>t</i></a>
@@ -735,6 +834,8 @@
     <script src="js/anime-particles.js"></script>
     <script src="js/parallax-bg.js"></script>
     <script src="js/anime-projects.js"></script>
+    <script src="js/newsletter.js"></script>
+    <script src="js/contact-form.js"></script>
 
     <!-- Just before the closing body tag -->
     <script src="particles.js"></script>
